Added history buffer + changed operations logic

--- a/ImageEditor/ImageEditor.vcxproj
+++ b/ImageEditor/ImageEditor.vcxproj
@@ -199,6 +199,7 @@
     <ClCompile Include="CentralWindow.cpp" />
     <ClCompile Include="Dropper.cpp" />
     <ClCompile Include="Eraser.cpp" />
+    <ClCompile Include="HistoryBuffer.cpp" />
     <ClCompile Include="ImageEditor.cpp" />
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="main.cpp">
@@ -218,6 +219,7 @@
     <ClInclude Include="Brush.h" />
     <ClInclude Include="Dropper.h" />
     <ClInclude Include="Eraser.h" />
+    <ClInclude Include="HistoryBuffer.h" />
     <ClInclude Include="InstrumentBase.h" />
     <ClInclude Include="Line.h" />
     <ClInclude Include="Pencil.h" />
